--- a/page2.html
+++ b/page2.html
@@ -65,6 +65,31 @@ GROUP BY
 ORDER BY
   d.developer_id, p.project_id;
 
+
+  ================================
+  INSERT INTO Project (project_id, project_name, start_date, end_date, description, status)
+VALUES
+  (1, 'Project A', '2023-08-01', '2023-08-10', 'Sample project A description', 'In Progress'),
+  (2, 'Project B', '2023-08-05', '2023-08-15', 'Sample project B description', 'Completed'),
+  (3, 'Project C', '2023-08-12', '2023-08-25', 'Sample project C description', 'Planned');
+
+
+INSERT INTO Developer (developer_id, first_name, last_name, email, phone_number, skills)
+VALUES
+  (1, 'Nirmal', 'Bage', 'Nirmal.Bage@example.com', '123-456-7890', 'Java, Python, SQL'),
+  (2, 'Anugrah', 'Smith', 'Anugrah.smith@example.com', '987-654-3210', 'C++, JavaScript, HTML'),
+  (3, 'DevDas', 'Nirmalson', 'DevDas.Nirmalson@example.com', '111-222-3333', 'Ruby, PHP, CSS');
+
+INSERT INTO Developer_Project (assignment_id, developer_id, project_id, assignment_start_date, assignment_end_date)
+VALUES
+  (1, 1, 1, '2023-08-02', '2023-08-08'), -- Nirmal worked on Project A for 7 days
+  (2, 1, 2, '2023-08-05', '2023-08-10'), -- Nirmal worked on Project B for 6 days
+  (3, 2, 1, '2023-08-03', '2023-08-09'), -- Anugrah worked on Project A for 7 days
+  (4, 2, 3, '2023-08-14', '2023-08-20'), -- Anugrah worked on Project C for 7 days
+  (5, 3, 2, '2023-08-06', '2023-08-14'), -- DevDas worked on Project B for 9 days
+  (6, 3, 3, '2023-08-17', '2023-08-22'); -- DevDas worked on Project C for 6 days
+
+
       </pre>
     </main>
   </body>
